--- a/inventory/host_vars/750gl/vars.yml
+++ b/inventory/host_vars/750gl/vars.yml
@@ -2,3 +2,15 @@
 
 mt_logging: []
 mt_logging_actions: []
+
+mt_ip_routes:
+  - gateway: "10.1.0.1"
+
+host_ips:
+  rom: "{{ ansible_host }}"
+
+__mt_ip_addresses_manual:
+  - interface: ether1
+    address: "{{ ansible_host }}/24"
+
+mt_admin_allowed_addresses: "{{ firewall_trusted_sources | ansible.utils.ipaddr('host') + ['10.1.0.0/24'] }}"
