--- a/inventory/host_vars/rb5009/dhcp.yml
+++ b/inventory/host_vars/rb5009/dhcp.yml
@@ -12,6 +12,10 @@ mt_ip_pools: >-
   {%- endfor -%}
   {{ tmp }}
 
+mt_dhcp_clients:
+  - interface: "{{ mt_wan_port }}"
+    disabled: false
+
 mt_dhcp_servers: >-
   {%- set tmp = [] -%}
   {%- for name, config in all_net.items() if 'dhcp_range' in config -%}
