--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,6 +11,7 @@ library = ./library
 module_utils = ./module_utils
 host_key_checking = False
 force_handlers = True
+forks = 50
 
 [inventory]
 enable_plugins = ini
