Add swap to docker and nextcloud

--- a/inventory/group_vars/nextcloud/vars.yml
+++ b/inventory/group_vars/nextcloud/vars.yml
@@ -34,3 +34,5 @@ nextcloud_exporter_auth_token: "{{ vault_nextcloud_exporter_auth_token }}"
 
 prometheus_nextcloud_targets:
   - "{{ nextcloud_exporter_listen_address }}"
+
+swapfile_size: 4G
