--- a/inventory/host_vars/theia/systemd/backup-gdrive.yml
+++ b/inventory/host_vars/theia/systemd/backup-gdrive.yml
@@ -48,7 +48,7 @@ __sd_backup_gdrive:
         rclone sync -v --exclude-if-present .rclone_ignore /mnt/tank/backup gsecret:tank-backup
 
         rclone sync -v /mnt/tank/archive/savegames gcrypt:savegames
-        rclone sync -v nextcloud: gcrypt:Nextcloud
+        rclone sync -v --exclude 'Camera/**' nextcloud: gcrypt:Nextcloud
 
         # Find latest pgbackrest backup
         latest_pg_full="$(find /mnt/tank/backup/pgbackrest/backup/main -maxdepth 1 -type d -name '*F' -exec basename {} \; | sort -rn | head -n1)"
