--- a/inventory/host_vars/webgw01/acme-dns.yml
+++ b/inventory/host_vars/webgw01/acme-dns.yml
@@ -3,3 +3,8 @@
 acmedns_domain: "{{ vault_acmedns_domain }}"
 acmedns_a_record: "{{ ansible_host }}"
 acmedns_api_port: 4443
+
+acmedns_manage_firewall: true
+acmedns_firewall_domains:
+  - "{{ hostvars['rb5009'].wireguard_endpoint.split(':', 1)[0] }}"
+  - "{{ hostvars['romsto'].wireguard_endpoint.split(':', 1)[0] }}"
