--- a/inventory/host_vars/webgw01/vars.yml
+++ b/inventory/host_vars/webgw01/vars.yml
@@ -22,3 +22,16 @@ prometheus_blackbox_icmp_targets:
 
 extra_host_ipv6_addresses:
   - "{{ acmedns_aaaa_record }}"
+
+networkd_config:
+  eth0: |
+    [Match]
+    Name=eth0
+
+    [Network]
+    DHCP=ipv4
+    Address={{ ansible_host6 }}/64
+    {% for ip in extra_host_ipv6_addresses %}
+    Address={{ ip }}/64
+    {% endfor %}
+    Gateway=fe80::1
