Move KDE setup to role

--- a/playbooks/gui.yml
+++ b/playbooks/gui.yml
@@ -320,6 +320,10 @@
         - desktop_environment == "sway"
       tags: ["sway"]
 
+    - role: setup_kde
+      when: desktop_environment == "kde"
+      tags: ["kde"]
+
     - role: aisbergg.snapper
       become: true
       when: snapper_configs | default([])
