--- a/playbooks/minio.yml
+++ b/playbooks/minio.yml
@@ -3,12 +3,6 @@
 
 - name: Provision minio
   hosts: minio
-  pre_tasks:
-    - name: Include common tasks
-      ansible.builtin.include_tasks:
-        file: ../tasks/common_servers.yml
-      tags: ["always"]
-
   roles:
     - role: minio
       tags: ["minio"]
@@ -26,5 +20,5 @@
         dest: "/root/.mc/config.json"
         owner: root
         group: root
-        mode: 0600
+        mode: "0600"
       tags: ["minio", "config"]
